# Healthcare-ML

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: clinical_demo.yaml
paper/: main.tex  results.tex
runs/clinical_demo/: model.joblib  results.json  train_meta.json
src/hchealth/: __init__.py  data.py  evaluate.py  run_pipeline.py  to_latex.py  train.py
tests/: test_basic.py
